--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba git</title>
 </head>
-<body><h1>Hola, mundo!</h1></body>
+<body><h1>Hola, mundo!</h1>
+    <p>Texto adicional</p>
+
+</body>
+<footer>Pie de página</footer>
 </html>
